fix: height for horizontal scrollbar

--- a/src/scss/pages/_homepage.scss
+++ b/src/scss/pages/_homepage.scss
@@ -336,6 +336,10 @@
     overflow-x: auto;
     overflow-y: hidden;
 
+    &::-webkit-scrollbar {
+      height: 10px;
+    }
+
     > *:not(:last-child) {
       margin-right: 4em;
     }
